Библиотека подключена к проекту.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
       "dom"
     ],
     "paths": {
+      "@env/*": [
+        "src/environments/*"
+      ],
       "auth-center": [
         "dist/auth-center/auth-center",
         "dist/auth-center"
