В package.json бавлен раздел "repository" с адресом репозитория для билда.

--- a/projects/auth-center/package.json
+++ b/projects/auth-center/package.json
@@ -13,5 +13,9 @@
   },
   "publishConfig": {
     "@iss:registry": "https://gitlab.iss-reshetnev.ru/api/v4/projects/774/packages/npm/"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://gitlab.iss-reshetnev.ru/libraries/angular/ng-auth-center.git"
   }
 }
