--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ default:
         echo "No package.json found! A package.json file is required to publish a package to GitLab's NPM registry."
         exit 1
       fi
-    - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
-    - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
+    - NPM_PACKAGE_NAME=$(node -p "require('./projects/auth-center/package.json').name")
+    - NPM_PACKAGE_VERSION=$(node -p "require('./projects/auth-center/package.json').version")
 
 validate_package_scope:
   stage: build
@@ -19,7 +19,7 @@ validate_package_scope:
         exit 1
       fi
 
-create_npmrc:
+build_package:
   stage: build
   script:
     - |
@@ -27,30 +27,19 @@ create_npmrc:
         echo 'No .npmrc found! Creating one now.'
 
         {
-          echo '@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_SERVER_PROTOCOL}://${CI_SERVER_HOST}:${CI_SERVER_PORT}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/'
-          echo '//${CI_SERVER_HOST}:${CI_SERVER_PORT}/api/v4/packages/npm/:_authToken=${CI_JOB_TOKEN}'
-          echo '//${CI_SERVER_HOST}:${CI_SERVER_PORT}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}'
-        } >> .npmrc
+          echo '@iss:registry=https://gitlab.iss-reshetnev.ru/api/v4/packages/npm/'
+          echo '//gitlab.iss-reshetnev.ru/api/v4/packages/npm/:_authToken=${CI_JOB_TOKEN}'
+          echo '//gitlab.iss-reshetnev.ru/api/v4/projects/774/packages/npm/:_authToken=${CI_JOB_TOKEN}'
+        } >> ~/.npmrc
 
       fi
-  artifacts:
-    paths:
-      - .npmrc
-
-build_package:
-    stage: build
-    script:
-        - npm install
-        - ng build auth-center --prod
-        - npm run build-lib-styles
-
-
-publish_package:
-  stage: deploy
-  script:
+    - npm install -g @angular/cli
+    - npm install
+    - ng build auth-center --prod
+    - npm run build-lib-styles
     - |
       {
-        cd dist/auth-center
+        cd dist/auth-center &&
         npm publish &&
         echo "Successfully published version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME} to GitLab's NPM registry: ${CI_PROJECT_URL}/-/packages"
       } || {
