--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 default:
-  only:
-    - master
+  only: master
   image: docker-hub.iss-reshetnev.ru/registry/languages/nodejs/node_14:alpine
 
   before_script:
@@ -13,8 +12,7 @@ default:
     - NPM_PACKAGE_VERSION=$(node -p "require('./projects/auth-center/package.json').version")
 
 validate_package_scope:
-  only:
-    - master
+  only: master
   stage: build
   script:
     - |
@@ -24,8 +22,7 @@ validate_package_scope:
       fi
 
 build_package:
-  only:
-    - master
+  only: master
   stage: build
   script:
     - |
