--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 default:
-  only: master
+  refs:  
+    only: 
+      - master
   image: docker-hub.iss-reshetnev.ru/registry/languages/nodejs/node_14:alpine
 
   before_script:
@@ -12,7 +14,9 @@ default:
     - NPM_PACKAGE_VERSION=$(node -p "require('./projects/auth-center/package.json').version")
 
 validate_package_scope:
-  only: master
+  refs:  
+    only: 
+      - master
   stage: build
   script:
     - |
@@ -22,7 +26,9 @@ validate_package_scope:
       fi
 
 build_package:
-  only: master
+  refs:  
+    only: 
+      - master
   stage: build
   script:
     - |
