--- a/angular.json
+++ b/angular.json
@@ -164,6 +164,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ng-auth-center-lib"
+    }
+  },
+  "defaultProject": "ng-auth-center-lib",
+  "cli": {
+    "analytics": false
+  }
 }
