Исключение изменений README.md из сборки проекта

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,9 @@ validate_package_scope:
   stage: build
   only:
     - master
+  except:
+    changes:
+      - "README.md"
   script:
     - |
       if [[ ! $NPM_PACKAGE_NAME =~ ^@$CI_PROJECT_ROOT_NAMESPACE/ ]]; then
