Добавление исключения README.md при сборке проекта

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,9 @@ build_package:
   stage: build
   only:
     - master
+  except:
+    changes:
+      - "README.md"
   script:
     - |
       if [[ ! -f .npmrc ]]; then
