--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -33,6 +33,16 @@ services:
     <<: *frontend
     command: /bin/bash
 
+  auth-center-lib:
+    <<: *frontend
+    depends_on:
+      - styles
+    command: ng build auth-center --watch
+
+  styles:
+    <<: *frontend
+    command: yarn run build-lib-watch-styles
+
   app:
     <<: *frontend
     ports:
